some of its functionality.
----------------------------------------------------------------------
Fri Jun 29 17:52:30 2012                        Michael Jennings (mej)

I smell unit tests!
----------------------------------------------------------------------
Mon Jul  2 16:33:54 2012                        Michael Jennings (mej)

Move unit test framework to separate file.  Now called "SHUT."

Override output functions to suppress normal NHC I/O and exception
handling.

Major refactoring of test framework to allow named tests and progress
output.

Added lots more unit tests for main nhc script.
----------------------------------------------------------------------
Mon Jul  2 17:17:38 2012                        Michael Jennings (mej)

Initial test files for each check script.
----------------------------------------------------------------------
Thu Aug 16 18:12:36 2012                        Michael Jennings (mej)

More work on unit tests:
 - Report number of tests skipped, if any.
 - Add tests for "common.nhc" module.
 - Add tests for "ww_fs.nhc" module.
 - Fix typos in external match checks.
----------------------------------------------------------------------
Fri Aug 24 15:29:17 2012                        Michael Jennings (mej)

Finished hardware unit tests.
----------------------------------------------------------------------
Mon Aug 27 14:52:27 2012                        Michael Jennings (mej)

Unit tests are finally done!  Should be 100% coverage on end-user
checks too, though I don't know of any "gcov" equivalents for
bash....  ;-)

TODO:  More checks!
----------------------------------------------------------------------
Mon Aug 27 16:39:47 2012                        Michael Jennings (mej)

Build fixes, alternative skip syntax, and unit test changes to allow
"make test" in the spec file.  Tested on RHEL4, 5, and 6 and in chroot
jails and VNFS images.
----------------------------------------------------------------------