@@ -1,0 +1,47 @@
+# NHC - nVidia GPU Checks
+#
+# Michael Jennings <mej@lbl.gov>
+# 27 August 2012
+#
+# $Id$
+#
+
+NVIDIA_HEALTHMON="${NVIDIA_HEALTHMON:-nvidia-healthmon}"
+NVIDIA_HEALTHMON_ARGS="${NVIDIA_HEALTHMON_ARGS:--e -v}"
+
+NV_HEALTHMON_LINES=( )
+NV_HEALTHMON_OUTPUT=""
+NV_HEALTHMON_RC=""
+
+export NV_HEALTHMON_LINES NV_HEALTHMON_OUTPUT NV_HEALTHMON_RC
+
+function nhc_nv_gather_data() {
+    local IFS
+
+    IFS=$'\n'
+    NV_HEALTHMON_LINES=( $($NVIDIA_HEALTHMON $NVIDIA_HEALTHMON_ARGS 2>/dev/null) )
+    NV_HEALTHMON_OUTPUT="${NV_HEALTHMON_LINES[*]}"
+    NV_HEALTHMON_RC=$?
+}
+
+# Run the nVidia Tesla Health Monitor utility and verify that all GPUs
+# are functioning properly.
+function check_nv_healthmon() {
+    if [[ -z "$NV_HEALTHMON_RC" ]]; then
+        nhc_nv_gather_data
+    fi
+
+    if [[ $NV_HEALTHMON_RC -eq 127 ]]; then
+        die 1 "$FUNCNAME:  $NVIDIA_HEALTHMON not found or not runnable."
+        return 1
+    elif [[ $NV_HEALTHMON_RC -gt 127 ]]; then
+        die 1 "$FUNCNAME:  $NVIDIA_HEALTHMON caught fatal signal $((NV_HEALTHMON_RC-127))"
+        return 1
+    elif [[ $NV_HEALTHMON_RC -gt 0 ]]; then
+        log "$NV_HEALTHMON_OUTPUT"
+        die 1 "$FUNCNAME:  $NVIDIA_HEALTHMON returned failure code $NV_HEALTHMON_RC"
+        return 1
+    else
+        return 0
+    fi
+}
