@@ -4,17 +4,17 @@
 #
 
 plan $((11+7+7+7+7+4+4+4+5+9)) "ww_hw.nhc" && {
-    is `type -t nhc_hw_gather_data 2>&1` 'function' 'nhc_hw_gather_data() loaded properly'
-    is `type -t check_hw_cpuinfo 2>&1` 'function' 'check_hw_cpuinfo() loaded properly'
-    is `type -t check_hw_physmem 2>&1` 'function' 'check_hw_physmem() loaded properly'
-    is `type -t check_hw_swap 2>&1` 'function' 'check_hw_swap() loaded properly'
-    is `type -t check_hw_mem 2>&1` 'function' 'check_hw_mem() loaded properly'
-    is `type -t check_hw_physmem_free 2>&1` 'function' 'check_hw_physmem_free() loaded properly'
-    is `type -t check_hw_swap_free 2>&1` 'function' 'check_hw_swap_free() loaded properly'
-    is `type -t check_hw_mem_free 2>&1` 'function' 'check_hw_mem_free() loaded properly'
-    is `type -t check_hw_ib 2>&1` 'function' 'check_hw_ib() loaded properly'
-    is `type -t check_hw_gm 2>&1` 'function' 'check_hw_gm() loaded properly'
-    is `type -t check_hw_eth 2>&1` 'function' 'check_hw_eth() loaded properly'
+    is "`type -t nhc_hw_gather_data 2>&1`" 'function' 'nhc_hw_gather_data() loaded properly'
+    is "`type -t check_hw_cpuinfo 2>&1`" 'function' 'check_hw_cpuinfo() loaded properly'
+    is "`type -t check_hw_physmem 2>&1`" 'function' 'check_hw_physmem() loaded properly'
+    is "`type -t check_hw_swap 2>&1`" 'function' 'check_hw_swap() loaded properly'
+    is "`type -t check_hw_mem 2>&1`" 'function' 'check_hw_mem() loaded properly'
+    is "`type -t check_hw_physmem_free 2>&1`" 'function' 'check_hw_physmem_free() loaded properly'
+    is "`type -t check_hw_swap_free 2>&1`" 'function' 'check_hw_swap_free() loaded properly'
+    is "`type -t check_hw_mem_free 2>&1`" 'function' 'check_hw_mem_free() loaded properly'
+    is "`type -t check_hw_ib 2>&1`" 'function' 'check_hw_ib() loaded properly'
+    is "`type -t check_hw_gm 2>&1`" 'function' 'check_hw_gm() loaded properly'
+    is "`type -t check_hw_eth 2>&1`" 'function' 'check_hw_eth() loaded properly'
 
 
     # CPU data:  Dual-socket, 6-core Sandy Bridge system with HT on
